--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saasd",
+  "name": "API_PESCA",
   "version": "1.0.0",
   "description": "inventario pesca",
   "main": "index.js",
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.7.1",
