--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jimp": "^0.22.12",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.7.1",
     "nodemon": "^3.0.3",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "sharp": "^0.33.2"
   }
 }
