--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "author": "jmbeltran",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jimp": "^0.22.12",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.7.1",
     "nodemon": "^3.0.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth": "^2.0.0",
+    "pdfkit": "^0.15.1",
     "sequelize": "^6.35.2",
     "sharp": "^0.33.2"
   }
